# tgbot-worker-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README_zh.md  wrangler.toml
examples/middleware/: Cargo.toml  README.MD  README_zh.MD  wrangler.toml
examples/middleware/src/: lib.rs
examples/version/: Cargo.toml  README.MD  README_zh.MD  wrangler.toml
examples/version/migrations/: 0001_init.sql
examples/version/src/: lib.rs
src/: cf.rs  controller.rs  error_handle.rs  extractor.rs  lib.rs  queue.rs  state.rs  wrapped_response.rs
src/controller/: init.rs  mod.rs  response_helpers.rs  set_webhook.rs  settings.rs
src/plugin/: command_handler.rs  mod.rs
src/route/: mod.rs
src/service/: mod.rs  telegram_service.rs
src/storage/: d1.rs  kv.rs  mod.rs
