#wasm target project
[build]
target = "wasm32-unknwon-unknown"

[package]
name = "tgbot-worker-rs"
version = "0.1.0"
edition = "2021"
authors = ["xiaolin <446304319@qq.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "tgbot_worker_rs"
path = "src/lib.rs"

[dependencies]


console_error_panic_hook = { version = "0.1.7" }

frankenstein = { git = "https://github.com/xlfish233/frankenstein", branch = "wasm-sup", features = ["async-http-client"], default-features = false }

serde = "1.0.210"
serde_json = "1.0.131"  # Added serde_json dependency
wasm-bindgen-futures = "0.4"
worker = { version = "0.4.2", features = ["http"] }
worker-macros = { version = "0.4.2" }
async-trait = "0.1.50"
futures-util = "0.3.31"  # 添加 async-trait 依赖

