[package]
name = "version"
version = "0.1.0"
edition = "2021"
authors = ["xlfish233 <446304319@qq.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.4.2", features = ['http'] }
worker-macros = { version = "0.4.2", features = ['http'] }
console_error_panic_hook = { version = "0.1.1" }
serde = "1.0.210"
serde_json = "1.0.131"  # Added serde_json dependency

tgbot-worker-rs = { path = "../.." }
futures-util = "0.3.31"
